navbar + footer + edits

--- a/index.html
+++ b/index.html
@@ -8,96 +8,180 @@
 
     <title>ASU Racing Team</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="style.css">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
+<div id="gradient" class="gradient"></div>
+<nav id="navbar" class="container navbar fixed-top navbar-expand-lg navbar-light">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <a class="navbar-brand" href="#">
+            <img src="assets/navbar_logo.png" width="192" height="82" alt="">
+        </a>
+        <div class="vertical-hr"></div>
+        <ul class="nav nav-pills">
+            <li class="nav-item">
+                <a class="nav-link" href="#First">First</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#Second">Second</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                   aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#One">One</a>
+                    <a class="dropdown-item" href="#Two">Two</a>
+                    <div role="separator" class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#Three">Three</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+<img alt="FAQ header" src="assets/header.jpg" style="width:100%;">
 <div class="container">
-    <p>
 
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis eros in sem rhoncus porta. Aliquam quis
-        tellus nulla. Pellentesque a dictum eros. Integer eu sem elementum, sagittis ex vitae, lacinia lacus. Etiam
-        vestibulum vitae augue eleifend aliquam. Proin facilisis elit nec iaculis malesuada. Donec dictum elit ut nibh
-        rutrum, non lobortis magna tincidunt. Morbi arcu nisi, blandit et est porttitor, condimentum elementum mauris.
-        Cras euismod nunc quis commodo tincidunt. Sed quis risus ullamcorper, blandit tellus sed, lobortis nisl.
-        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean est eros,
-        pellentesque in auctor a, mollis sit amet felis.
-
-        Vestibulum tempor semper odio, porta gravida nisi facilisis vel. Pellentesque vestibulum dolor diam, ut egestas
-        arcu rutrum non. Donec sapien felis, placerat ullamcorper molestie ac, efficitur vel massa. Aliquam congue
-        suscipit augue vitae porta. Aenean aliquet nunc mauris, ac ultricies erat sagittis ac. Sed mauris odio, finibus
-        sit amet nulla vitae, rutrum aliquam ex. Donec finibus eros justo. Sed et purus nec dolor sodales auctor sed id
-        sapien.
-
-        Suspendisse eleifend lorem non scelerisque laoreet. Fusce vehicula enim lectus, eget mollis purus auctor eu.
-        Duis sed nulla a metus feugiat vulputate at a libero. Nam sodales, sem eu tempor sollicitudin, turpis leo tempor
-        dolor, ullamcorper volutpat nunc sapien et libero. Morbi hendrerit est id ipsum faucibus sodales. Mauris nunc
-        ipsum, molestie a lacinia vitae, lacinia et nibh. Cras eu porta nulla. Nulla in ornare mi, eget varius lacus.
-        Suspendisse tempor efficitur felis, nec volutpat dui lobortis sed. Phasellus eget nisi eget mauris tincidunt
-        congue. Quisque imperdiet maximus mi at vestibulum. Curabitur feugiat posuere purus in pharetra. In eget justo
-        metus. Fusce bibendum turpis ut posuere sollicitudin. Fusce at libero dignissim, placerat nunc at, venenatis
-        eros.
-
-        Vivamus tincidunt velit lorem, et sodales odio accumsan sit amet. Aliquam iaculis arcu quis leo lobortis
-        faucibus. Donec vel mi eget leo pretium porta ac vel felis. Sed posuere magna sem, non fermentum lacus aliquet
-        id. Maecenas tempor sit amet leo tincidunt sagittis. Nunc nec bibendum velit, et suscipit arcu. Etiam at cursus
-        risus, vitae maximus massa. Aliquam ornare erat a nisi auctor, vel venenatis metus ultricies. Mauris sodales
-        quam ac quam auctor maximus. Ut facilisis posuere sem ac consectetur. Mauris eu tortor ut odio finibus sagittis.
-        Nunc sapien velit, rutrum a varius sed, ultrices quis sapien. Nulla ac cursus est.
-
-        Aenean laoreet eget tortor sit amet bibendum. Morbi a libero elit. Nunc id velit efficitur, varius libero nec,
-        viverra augue. Pellentesque ullamcorper mi leo, eu feugiat dui auctor et. Suspendisse sit amet volutpat orci.
-        Etiam feugiat massa ac metus dictum, a gravida ligula ultricies. Quisque vel viverra lectus. Sed ipsum dui,
-        maximus at vestibulum in, efficitur sit amet odio. Donec nunc arcu, porttitor sodales tellus eu, interdum semper
-        tellus. Fusce viverra, orci scelerisque mollis tincidunt, justo massa blandit orci, ut aliquam eros mi ac
-        lectus. Maecenas sodales eros in elit tristique hendrerit. Mauris felis velit, tempus sit amet sagittis nec,
-        egestas sit amet metus. Phasellus ut nisi in orci iaculis pellentesque a quis turpis.
-
-
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis eros in sem rhoncus porta. Aliquam quis
-        tellus nulla. Pellentesque a dictum eros. Integer eu sem elementum, sagittis ex vitae, lacinia lacus. Etiam
-        vestibulum vitae augue eleifend aliquam. Proin facilisis elit nec iaculis malesuada. Donec dictum elit ut nibh
-        rutrum, non lobortis magna tincidunt. Morbi arcu nisi, blandit et est porttitor, condimentum elementum mauris.
-        Cras euismod nunc quis commodo tincidunt. Sed quis risus ullamcorper, blandit tellus sed, lobortis nisl.
-        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean est eros,
-        pellentesque in auctor a, mollis sit amet felis.
-
-        Vestibulum tempor semper odio, porta gravida nisi facilisis vel. Pellentesque vestibulum dolor diam, ut egestas
-        arcu rutrum non. Donec sapien felis, placerat ullamcorper molestie ac, efficitur vel massa. Aliquam congue
-        suscipit augue vitae porta. Aenean aliquet nunc mauris, ac ultricies erat sagittis ac. Sed mauris odio, finibus
-        sit amet nulla vitae, rutrum aliquam ex. Donec finibus eros justo. Sed et purus nec dolor sodales auctor sed id
-        sapien.
-
-        Suspendisse eleifend lorem non scelerisque laoreet. Fusce vehicula enim lectus, eget mollis purus auctor eu.
-        Duis sed nulla a metus feugiat vulputate at a libero. Nam sodales, sem eu tempor sollicitudin, turpis leo tempor
-        dolor, ullamcorper volutpat nunc sapien et libero. Morbi hendrerit est id ipsum faucibus sodales. Mauris nunc
-        ipsum, molestie a lacinia vitae, lacinia et nibh. Cras eu porta nulla. Nulla in ornare mi, eget varius lacus.
-        Suspendisse tempor efficitur felis, nec volutpat dui lobortis sed. Phasellus eget nisi eget mauris tincidunt
-        congue. Quisque imperdiet maximus mi at vestibulum. Curabitur feugiat posuere purus in pharetra. In eget justo
-        metus. Fusce bibendum turpis ut posuere sollicitudin. Fusce at libero dignissim, placerat nunc at, venenatis
-        eros.
-
-        Vivamus tincidunt velit lorem, et sodales odio accumsan sit amet. Aliquam iaculis arcu quis leo lobortis
-        faucibus. Donec vel mi eget leo pretium porta ac vel felis. Sed posuere magna sem, non fermentum lacus aliquet
-        id. Maecenas tempor sit amet leo tincidunt sagittis. Nunc nec bibendum velit, et suscipit arcu. Etiam at cursus
-        risus, vitae maximus massa. Aliquam ornare erat a nisi auctor, vel venenatis metus ultricies. Mauris sodales
-        quam ac quam auctor maximus. Ut facilisis posuere sem ac consectetur. Mauris eu tortor ut odio finibus sagittis.
-        Nunc sapien velit, rutrum a varius sed, ultrices quis sapien. Nulla ac cursus est.
-
-        Aenean laoreet eget tortor sit amet bibendum. Morbi a libero elit. Nunc id velit efficitur, varius libero nec,
-        viverra augue. Pellentesque ullamcorper mi leo, eu feugiat dui auctor et. Suspendisse sit amet volutpat orci.
-        Etiam feugiat massa ac metus dictum, a gravida ligula ultricies. Quisque vel viverra lectus. Sed ipsum dui,
-        maximus at vestibulum in, efficitur sit amet odio. Donec nunc arcu, porttitor sodales tellus eu, interdum semper
-        tellus. Fusce viverra, orci scelerisque mollis tincidunt, justo massa blandit orci, ut aliquam eros mi ac
-        lectus. Maecenas sodales eros in elit tristique hendrerit. Mauris felis velit, tempus sit amet sagittis nec,
-        egestas sit amet metus. Phasellus ut nisi in orci iaculis pellentesque a quis turpis. </p>
+    <div data-spy="scroll" data-target="#navbar-example2" data-offset-top="100">
+        <h4 id="First" class="sc">First</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis eros in sem rhoncus porta. Aliquam quis
+            tellus nulla. Pellentesque a dictum eros. Integer eu sem elementum, sagittis ex vitae, lacinia lacus. Etiam
+            vestibulum vitae augue eleifend aliquam. Proin facilisis elit nec iaculis malesuada. Donec dictum elit ut
+            nibh
+            rutrum, non lobortis magna tincidunt. Morbi arcu nisi, blandit et est porttitor, condimentum elementum
+            mauris.
+            Cras euismod nunc quis commodo tincidunt. Sed quis risus ullamcorper, blandit tellus sed, lobortis nisl.
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean est eros,
+            pellentesque in auctor a, mollis sit amet felis.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis eros in sem rhoncus porta. Aliquam quis
+            tellus nulla. Pellentesque a dictum eros. Integer eu sem elementum, sagittis ex vitae, lacinia lacus. Etiam
+            vestibulum vitae augue eleifend aliquam. Proin facilisis elit nec iaculis malesuada. Donec dictum elit ut
+            nibh
+            rutrum, non lobortis magna tincidunt. Morbi arcu nisi, blandit et est porttitor, condimentum elementum
+            mauris.
+            Cras euismod nunc quis commodo tincidunt. Sed quis risus ullamcorper, blandit tellus sed, lobortis nisl.
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean est eros,
+            pellentesque in auctor a, mollis sit amet felis.</p>
+        <h4 id="Second" class="sc">Second</h4>
+        <p>Suspendisse eleifend lorem non scelerisque laoreet. Fusce vehicula enim lectus, eget mollis purus auctor eu.
+            Duis sed nulla a metus feugiat vulputate at a libero. Nam sodales, sem eu tempor sollicitudin, turpis leo
+            tempor
+            dolor, ullamcorper volutpat nunc sapien et libero. Morbi hendrerit est id ipsum faucibus sodales. Mauris
+            nunc
+            ipsum, molestie a lacinia vitae, lacinia et nibh. Cras eu porta nulla. Nulla in ornare mi, eget varius
+            lacus.
+            Suspendisse tempor efficitur felis, nec volutpat dui lobortis sed. Phasellus eget nisi eget mauris tincidunt
+            congue. Quisque imperdiet maximus mi at vestibulum. Curabitur feugiat posuere purus in pharetra. In eget
+            justo
+            metus. Fusce bibendum turpis ut posuere sollicitudin. Fusce at libero dignissim, placerat nunc at, venenatis
+            eros.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis eros in sem rhoncus porta. Aliquam
+            quis
+            tellus nulla. Pellentesque a dictum eros. Integer eu sem elementum, sagittis ex vitae, lacinia lacus. Etiam
+            vestibulum vitae augue eleifend aliquam. Proin facilisis elit nec iaculis malesuada. Donec dictum elit ut
+            nibh
+            rutrum, non lobortis magna tincidunt. Morbi arcu nisi, blandit et est porttitor, condimentum elementum
+            mauris.
+            Cras euismod nunc quis commodo tincidunt. Sed quis risus ullamcorper, blandit tellus sed, lobortis nisl.
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean est eros,
+            pellentesque in auctor a, mollis sit amet felis.
+        </p>
+        <h4 id="One" class="sc">One</h4>
+        <p>Vestibulum tempor semper odio, porta gravida nisi facilisis vel. Pellentesque vestibulum dolor diam, ut
+            egestas
+            arcu rutrum non. Donec sapien felis, placerat ullamcorper molestie ac, efficitur vel massa. Aliquam congue
+            suscipit augue vitae porta. Aenean aliquet nunc mauris, ac ultricies erat sagittis ac. Sed mauris odio,
+            finibus
+            sit amet nulla vitae, rutrum aliquam ex. Donec finibus eros justo. Sed et purus nec dolor sodales auctor sed
+            id
+            sapien.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis eros in sem rhoncus porta. Aliquam quis
+            tellus nulla. Pellentesque a dictum eros. Integer eu sem elementum, sagittis ex vitae, lacinia lacus. Etiam
+            vestibulum vitae augue eleifend aliquam. Proin facilisis elit nec iaculis malesuada. Donec dictum elit ut
+            nibh
+            rutrum, non lobortis magna tincidunt. Morbi arcu nisi, blandit et est porttitor, condimentum elementum
+            mauris.
+            Cras euismod nunc quis commodo tincidunt. Sed quis risus ullamcorper, blandit tellus sed, lobortis nisl.
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean est eros,
+            pellentesque in auctor a, mollis sit amet felis.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis eros in sem rhoncus porta. Aliquam quis
+            tellus nulla. Pellentesque a dictum eros. Integer eu sem elementum, sagittis ex vitae, lacinia lacus. Etiam
+            vestibulum vitae augue eleifend aliquam. Proin facilisis elit nec iaculis malesuada. Donec dictum elit ut
+            nibh
+            rutrum, non lobortis magna tincidunt. Morbi arcu nisi, blandit et est porttitor, condimentum elementum
+            mauris.
+            Cras euismod nunc quis commodo tincidunt. Sed quis risus ullamcorper, blandit tellus sed, lobortis nisl.
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean est eros,
+            pellentesque in auctor a, mollis sit amet felis.</p>
+        <h4 id="Two" class="sc">Two</h4>
+        <p>Aenean laoreet eget tortor sit amet bibendum. Morbi a libero elit. Nunc id velit efficitur, varius libero
+            nec,
+            viverra augue. Pellentesque ullamcorper mi leo, eu feugiat dui auctor et. Suspendisse sit amet volutpat
+            orci.
+            Etiam feugiat massa ac metus dictum, a gravida ligula ultricies. Quisque vel viverra lectus. Sed ipsum dui,
+            maximus at vestibulum in, efficitur sit amet odio. Donec nunc arcu, porttitor sodales tellus eu, interdum
+            semper
+            tellus. Fusce viverra, orci scelerisque mollis tincidunt, justo massa blandit orci, ut aliquam eros mi ac
+            lectus. Maecenas sodales eros in elit tristique hendrerit. Mauris felis velit, tempus sit amet sagittis nec,
+            egestas sit amet metus. Phasellus ut nisi in orci iaculis pellentesque a quis turpis.</p>
+        <h4 id="Three" class="sc">Three</h4>
+        <p>Vivamus tincidunt velit lorem, et sodales odio accumsan sit amet. Aliquam iaculis arcu quis leo lobortis
+            faucibus. Donec vel mi eget leo pretium porta ac vel felis. Sed posuere magna sem, non fermentum lacus
+            aliquet
+            id. Maecenas tempor sit amet leo tincidunt sagittis. Nunc nec bibendum velit, et suscipit arcu. Etiam at
+            cursus
+            risus, vitae maximus massa. Aliquam ornare erat a nisi auctor, vel venenatis metus ultricies. Mauris sodales
+            quam ac quam auctor maximus. Ut facilisis posuere sem ac consectetur. Mauris eu tortor ut odio finibus
+            sagittis.
+            Nunc sapien velit, rutrum a varius sed, ultrices quis sapien. Nulla ac cursus est.</p>
+    </div>
 
 
 </div>
 
+<div class="footer" style="background-color:black;">
+    <div class="container-fluid">
+
+        <div class="row">
+            <div class="col-lg-1">
+            </div>
+            <div class="col-lg-4 col-12 mb-3 text-center">
+                <img class="img-responsive" src="assets/footer_logo.jpg">
+                <br>
+                <div class="text-muted Copyrights">
+                    Copyright © 2017 ASU RACING TEAM
+                    <br> All Rights Reserved.
+                </div>
+            </div>
+            <div class="col-lg-2">
+            </div>
+            <div class="col-lg-4 col-12 my-auto ml-auto text-center">
+                <a id="facebook" href="https://www.facebook.com/ASU.Racing.Team/" target="_blank">
+                    <i class="fa fa-facebook-square fa-3x fa-fw" aria-hidden="true"></i>
+                </a>
+                <a id="twitter" href="https://twitter.com/asuracingteam" target="_blank">
+                    <i class="fa fa-twitter-square fa-3x fa-fw" aria-hidden="true"></i>
+                </a>
+                <a id="instagram" href="https://www.instagram.com/asu.rt/" target="_blank">
+                    <i class="fa fa-instagram fa-3x fa-fw" aria-hidden="true"></i>
+                </a>
+                <a id="linkedin" href="https://www.linkedin.com/company/10910709/" target="_blank">
+                    <i class="fa fa-linkedin-square fa-3x fa-fw" aria-hidden="true"></i>
+                </a>
+                <a id="youtube" href="https://www.youtube.com/user/asuracingteam/" target="_blank">
+                    <i class="fa fa-youtube-square fa-3x fa-fw" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="col-lg-1">
+            </div>
+        </div>
+    </div>
+</div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
